--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"server:dev": "nodemon server.js",
 		"json:server": "json-server --watch local/raw-data.json"
 	},
 	"author": "Piyush Abbi",
@@ -17,6 +18,7 @@
 		"lodash": "^4.17.10"
 	},
 	"devDependencies": {
-		"json-server": "^0.14.0"
+		"json-server": "^0.14.0",
+		"nodemon": "^1.17.5"
 	}
 }
